--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,10 @@
   margin: 0;
 }
 
+.formFile {
+  margin-top: 5px;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
